deploy/chronograf/chronograf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chronograf
  name: chronograf
  namespace: chronograf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chronograf
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chronograf
    spec:
      containers:
      - image: chronograf:1.9.4
        imagePullPolicy: IfNotPresent
        name: chronograf
        ports:
        - containerPort: 8888
          name: chronograf
      restartPolicy: Always
