deploy/chronograf/chronograf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chronograf
  namespace: chronograf
  labels:
    app: chronograf
spec:
  ports:
    - port: 8888
  selector:
    app: chronograf
  type: ClusterIP
