deploy/chronograf/chronograf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-collection@kubernetescrd
  name: chronograf
  namespace: chronograf
spec:
  rules:
  - host: chronograf.nuc.local
    http:
      paths:
      - backend:
          service:
            name: chronograf
            port:
              number: 8888
        path: /
        pathType: ImplementationSpecific
